# CajeteCMA

./: .gitignore  CMakeLists.txt  README.md
notebooks/: experiment_1_results.ipynb  experiment_2_results.ipynb  experiment_3_results.ipynb
scripts/: builder.sh
simulators/: CMakeLists.txt  mt_dgg_simulator.cpp  settings.json
simulators/configuration/: experiment1.json  experiment2.json  experiment3_1x1.json  experiment3_2x1.json  experiment3_2x2.json  experiment3_4x4.json  experiment3_8x8.json  test.json
src/PlantModel/: PlantGrammar.hpp  PlantModel.hpp  PlantSSA.hpp  PlantUtils.hpp
tests/: CMakeLists.txt
